--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,4 +1,4 @@
-\section{CAPÍTULO I: INTRODUCCIÓN}\label{sec:introduction}
+\section{CAPÍTULO 1: INTRODUCCIÓN}\label{sec:introduction}
 
 En esta sección del trabajo se explican y definen los conceptos básicos en relación al contexto del trabajo que se utilizarán a lo largo del mismo. Además, se realiza una revisión bibliográfica de los temas que se van a tratar.
 
@@ -12,20 +12,20 @@ Una de las posibles complicaciones graves derivadas del cuadro bronquiolítico e
 
 Es importante destacar que no todos los casos de bronquiolitis conducen a insuficiencia respiratoria aguda. La mayoría de los niños con bronquiolitis presentan síntomas leves a moderados y se recuperan sin complicaciones graves. 
 
-La bronquiolitis a día de hoy es una enfermedad impredecible, que puede ser desde tratado a nivel ambulatorio como precisar ingreso en planta, los pacientes que sufren un empeoramiento se les suele suministrar si se dispone Oxigenación de Alto Flujo y un porcentaje que no consiguen remontar se ingresan en la Unidad de Cuidados Intensivos Pediátricos (UCIP) dónde generalmente se aplican otras terapias de soporte respiratorio. 
+La bronquiolitis a día de hoy es una enfermedad impredecible, que puede ser desde tratada a nivel ambulatorio como precisar ingreso en planta, los pacientes que sufren un empeoramiento se les suele suministrar si se dispone Oxigenación de Alto Flujo y un porcentaje que no consiguen remontar se ingresan en la Unidad de Cuidados Intensivos Pediátricos (UCIP) dónde generalmente se aplican otras terapias de soporte respiratorio. 
 
-La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda (\cite{Daverio2019}).
+La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCIP), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado (terapia OAF) puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda (\cite{Daverio2019}).
 
 
 \subsection{Oxigenoterapia de Alto Flujo en los Servicios de Pediatría} 
 
 En los años recientes se ha incrementado el uso de la OAF en los pacientes con insuficiencia respiratoria aguda. Esta fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. La oxigenoterapia de alto flujo permite administrar un flujo de gas totalmente acondicionado hasta a 60L/min mediante cánulas nasales, obteniendo una rápida mejoría de los síntomas debido a diferentes mecanismos como, por ejemplo, una reducción de la resistencia de la vía aérea superior, cambios en el volumen circulante y la generación de cierto grado de presión positiva. Además, todo ello se consigue junto con una mejor tolerancia y comodidad por parte del paciente (\cite{Masclans2015}),
 
-En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación (\cite{Betters2017}). 
+En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCIP. Esto se debe principalmente a que aquellos pacientes que no están en UCIP tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación (\cite{Betters2017}). 
 
 En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo de \cite{Lodeserto2018} se hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
 
-Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón.
+Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCIP pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón.
 
 
 \subsection{Motivación del estudio}
@@ -34,7 +34,7 @@ Existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas d
 
 Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización (\cite{AmandaC}).
 
-En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico, con la hemoglobina para formar la oxihemoglobina, que es quien transporta el oxígeno en sangre hacia los tejidos (\cite{Laborde2004}). La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
+En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica la cantidad de oxígeno que se combina, en el sentido químico, con la hemoglobina para formar la oxihemoglobina, que es quien transporta el oxígeno en sangre hacia los tejidos (\cite{Laborde2004}). La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
 
 \subsection{Monitorización Continua de Variables Fisiológicas}
 
@@ -49,7 +49,7 @@ Las variables fisiológicas que se van a considerar en este estudio son:
 
 \subsection{Aprendizaje Automático en el Ámbito de la Salud}
 
-El aprendizaje automático (AA) es una rama de la inteligencia artificial que se centra en el estudio y construcción de sistemas capaces de aprender de los datos, identificar patrones y tomar decisiones con mínima intervención humana. En los últimos años el AA ha demostrado ser una herramienta poderosa y útil dentro del ámbito de la salud. Con la creciente disponibilidad de datos de salud electrónicos y la mejora de la potencia informática, el AA ha encontrado muchas formas de mejorar el diagnóstico, el pronóstico y el tratamiento de enfermedades, así como el sistema de salud en general. Por esta razón esta herramienta es utilizada en varios sistemas dentro del ámbito de la salud. El AA se puede dividir en dos categorías principales: aprendizaje supervisado y aprendizaje no supervisado.
+El aprendizaje automático (AA) es una rama de la inteligencia artificial (IA) que se centra en el estudio y construcción de sistemas capaces de aprender de los datos, identificar patrones y tomar decisiones con mínima intervención humana. En los últimos años el AA ha demostrado ser una herramienta poderosa y útil dentro del ámbito de la salud. Con la creciente disponibilidad de datos de salud electrónicos y la mejora de la potencia informática, el AA ha encontrado muchas formas de mejorar el diagnóstico, el pronóstico y el tratamiento de enfermedades, así como el sistema de salud en general. Por esta razón esta herramienta es utilizada en varios sistemas dentro del ámbito de la salud. El AA se puede dividir en dos categorías principales: aprendizaje supervisado y aprendizaje no supervisado.
 
 \begin{itemize}
     \item El aprendizaje supervisado se refiere a un conjunto de algoritmos que pueden aplicarse a un conjunto de datos etiquetados. 
@@ -57,6 +57,20 @@ El aprendizaje automático (AA) es una rama de la inteligencia artificial que se
 \end{itemize}
 
 En el presente trabajo se utilizaran ambos enfoques.
+
+El presente Trabajo de Fin de Máster se va a organizar en los siguientes capítulos:
+
+\begin{itemize}
+    \item \textbf{Capítulo 1: Introducción.} Comienza con una visión general del trabajo, estableciendo los fundamentos teóricos y proporcionando una revisión bibliográfica relevante.
+    \item \textbf{Capítulo 2: Objetivos.} Define de manera precisa los objetivos generales y específicos que se persiguen en este Trabajo de Fin de Máster.
+    \item \textbf{Capítulo 3: Los Datos.} Explora la gestión y tratamiento de los datos utilizados en el proyecto de investigación.
+    \item \textbf{Capítulo 4: Metodología.} Detalla la metodología empleada en la realización del trabajo.
+    \item \textbf{Capítulo 5: Resultados.} Examina y discute los hallazgos y resultados obtenidos durante el desarrollo del Trabajo de Fin de Máster.
+    \item \textbf{Capítulo 6: Conclusiones y Líneas Futuras.} Presenta las conclusiones derivadas de la investigación y propone posibles direcciones para futuros estudios en relación al presente Trabajo de Fin de Máster.
+    \item \textbf{Capítulo 7: Planificación y Presupuesto.} Expone la planificación temporal del proyecto y su correspondiente presupuesto.
+    \item \textbf{Capítulo 8: Responsabilidad Social y Profesional.} Aborda la dimensión ética y profesional del Trabajo de Fin de Máster.
+    \end{itemize}
+
 
 
 
