--- a/lib/chapter4-1.tex
+++ b/lib/chapter4-1.tex
@@ -24,7 +24,7 @@ donde:
 
 \( Z \sim N(0,1) \) es una variable aleatoria con distribución normal estándar (distribución normal con media 0 y varianza 1).
 
-\( X \sim \chi_{v}^{2} \) es una variable aleatoria que sigue una distribución chi-cuadrada con \( v \) grados de libertad.
+\( X \sim \chi_{v}^{2} \) es una variable aleatoria que sigue una distribución chi-cuadrado con \( v \) grados de libertad.
 
 \( Z \) y \( X \) son variables aleatorias independientes.
 
@@ -33,7 +33,7 @@ El estadístico \( t \) calculado se compara con un valor crítico de la distrib
 
 Este estudio se va a realizar para la \textit{Frecuencia Cardiaca}, para la \textit{Frecuencia Cardiaca Transformada por Cuantiles}, para la \textit{Frecuencia Cardiaca Escalada} y para la \textit{Saturación de Oxígeno Escalada}. Se quiere pues observar si realmente existe una diferencia significativa entre las medias de los datos de monitorización de los pacientes pediátricos que han necesitado OAF y los que no la han necesitado.
 
-Para ello partiendo de los $1440$ valores de monitorización se calcularán las medias horarias gracias al código mostrado en la Sección~\ref{sec:anexo2} de los Anexos.
+Para ello partiendo de los $1440$ valores de monitorización se calcularán las medias horarias gracias este procesamiento se muestra en la Sección~\ref{sec:anexo2} de los Anexos.
 
 
 
