--- a/lib/chapter4.tex
+++ b/lib/chapter4.tex
@@ -1,4 +1,4 @@
-\section{CAPÍTULO IV: METODOLOGÍA}\label{cap:methodology}
+\section{CAPÍTULO 4: METODOLOGÍA}\label{cap:methodology}
 
 En este capítulo, se comenzará por discutir el diseño de la investigación para más tarde describir la metodología utilizada para cumplir los objetivos planteados en la Sección~\ref{sec:objectives}. 
 
@@ -61,7 +61,7 @@ De cara a plantear la investigación teniendo en cuenta los diferentes intervalo
 
 Una vez vista la distribución de los pacientes que presentan UCIP y OAF en los $3$ intervalos de tiempo antes mencionados, cabe preguntarse si tiene sentido plantear el presente trabajo de la forma previamente discutida.
 
-Respecto a los pacientes que son ingresados en la UCIP, se les va a catalogar como pacientes que han sufrido un \textit{Deterioro}. Dado que todos los pacientes que han sido ingresados en la UCIP han recibido soporte respiratorio mediante la técnica OAF, simplemente se les va a considerar como pacientes que han necesitado OAF. En otras palabras, no se utilizará la variable UCIP como variable de salida en este trabajo debido a la escasa representación de este tipo de paciente. Esta consideración se ha mencionado anteriormente en el conjunto total de pacientes en la Figura~\ref{fig:venn-OAF-UCIP} de la Sección~\ref{sec:seleccion_pacientes}.
+Respecto a los pacientes que son ingresados en la UCIP, se les va a catalogar como pacientes que han sufrido un DETERIORO. Dado que todos los pacientes que han sido ingresados en la UCIP han recibido soporte respiratorio mediante la técnica OAF, simplemente se les va a considerar como pacientes que han necesitado OAF. En otras palabras, no se utilizará la variable UCIP como variable de salida en este trabajo debido a la escasa representación de este tipo de paciente. Esta consideración se ha mencionado anteriormente en el conjunto total de pacientes en la Figura~\ref{fig:venn-OAF-UCIP} de la Sección~\ref{sec:seleccion_pacientes}.
 
 La exclusión de los pacientes que han necesitado OAF tiene sentido, ya que una vez que al paciente se le suministra OAF, los datos de monitorización recogidos del mismo ya están afectados por la técnica de soporte respiratorio. Por lo tanto, carece de sentido utilizar dichos datos para predecir si el paciente va a necesitar OAF en las próximas $8$ horas, ya que se están recogiendo en un contexto diferente al de los demás pacientes.
 
@@ -85,9 +85,9 @@ Antes de realizar el modelado del algoritmo de clasificación, se va a querer vi
     \item \textbf{Selección de Datos:} Al tener 480 valores de monitorización de \textit{Frecuencia Cardíaca} y \textit{Saturación de O$_2$} se van a utilizar diferentes datos para la ejecución de los clusters:
     \begin{enumerate}
         \item \textsc{Datos en bruto:} Se van a utilizar los 480 datos en bruto de monitorización de los pacientes de cada \textit{Serie Temporal}.
-        \item \textsc{Función de autocorrelación (FAC):} Se van a utilizar las primeras 50 observaciones de la FAC de cada \textit{Serie Temporal}.
+        \item \textsc{Función de autocorrelación (FAS):} Se van a utilizar las primeras 50 observaciones de la FAS de cada \textit{Serie Temporal}.
         \item \textsc{Periodograma:} Se usarán los periodogramas de cada \textit{Serie Temporal}.
-        \item \textsc{Función de autocorrelación cruzada (FACC):} Se van a utilizar las primeras 100 observaciones de la FACC de la relación entre las \textit{Serie Temporales} de \textit{Frecuencia Cardíaca} y \textit{Saturación de O$_2$}.
+        \item \textsc{Función de correlación cruzada (FCC):} Se van a utilizar las primeras 100 observaciones de la FCC de la relación entre las \textit{Serie Temporales} de \textit{Frecuencia Cardíaca} y \textit{Saturación de O$_2$}.
     \end{enumerate}
     \item \textbf{Series Temporales a usar:} Se van a utilizar las siguientes transformaciones de los datos seleccionados en el paso anterior:
     \begin{enumerate}
@@ -98,17 +98,17 @@ Antes de realizar el modelado del algoritmo de clasificación, se va a querer vi
     \item \textbf{Clustering:} Mediante cluster jerárquico se van a agrupar los pacientes en función de los datos seleccionados en el paso anterior.
     \item \textbf{Visualización:} Se van a visualizar los clusters obtenidos en el paso anterior en función de si el paciente ha necesitado OAF de esta forma se pretenderá ver si se aíslan de alguna forma las dos categorías de pacientes previamente establecidas. 
     \item \textbf{Caracterización de Clusters:} 
-    Se llevará a cabo la caracterización de los clusters, tomando en consideración las diversas variables descriptivas de cada paciente (edad, género, peso, OAF, ...). Esto se realizará mediante la construcción de un modelo de clasificación discreta, se buscará entender cómo las distintas variables descriptivas influyen en la asignación de etiquetas a los clusters. Este análisis permitirá identificar las variables más influyentes en la distinción de pacientes pertenecientes a los diferentes clusters. Lo ideal en este caso sería observar como en un cluster la variable OAF es la que más influye en la clasificación de los pacientes, ya que esto significaría que los clusters se han formado en función de si el paciente ha necesitado OAF o no. Si esto es así se podría concluir que los clusters obtenidos partiendo de los datos obtenidos de las \textit{Series Temporales} y sus respectivas transformaciones, son capaces de diferenciar a los pacientes que han necesitado OAF de los que no. Respecto a este punto y en último lugar se va a mostrar como se distribuye la importancia de los datos utilizados en función de las etiquetas utilizadas para realizar el \textit{clustering}. En este apartado si los \textit{clusters} generan una muestra de pacientes desbalanceada por grupos se utilizará el método \textit{SMOTE} para balancearla, esta técnica se explica en la Sección~\ref{sec:oversampling}.
-    \item \textbf{Modelado:} Si el anterior paso resulta exitoso será inmediato generar un modelo que permita la clasificación de pacientes que van a necesitar OAF y los que no. El modelo de clasificación será un modelo de clasificación binaria, ya que la variable de salida es una variable categórica con dos categorías: \textit{paciente que va a necesitar OAF} y \textit{paciente que no va a necesitar OAF}. 
+    Se llevará a cabo la caracterización de los clusters, tomando en consideración las diversas variables descriptivas de cada paciente (edad, género, peso, OAF, ...). Esto se realizará mediante la construcción de un modelo de clasificación discreta, se buscará entender cómo las distintas variables descriptivas influyen en la asignación de etiquetas a los clusters. Este análisis permitirá identificar las variables más influyentes en la distinción de pacientes pertenecientes a los diferentes clusters. Lo ideal en este caso sería observar como en un cluster la variable OAF es la que más influye en la clasificación de los pacientes, ya que esto significaría que los clusters se han formado en función de si el paciente ha necesitado OAF o no. Si esto es así se podría concluir que los clusters obtenidos partiendo de los datos obtenidos de las \textit{Series Temporales} y sus respectivas transformaciones, son capaces de diferenciar a los pacientes que han necesitado OAF de los que no. Respecto a este punto y en último lugar se va a mostrar como se distribuye la importancia de los datos utilizados en función de las etiquetas utilizadas para realizar el \textit{clustering}. En este apartado si los \textit{clusters} generan una muestra de pacientes desbalanceada por grupos se utilizará el método SMOTE para balancearla, esta técnica se explica en la Sección~\ref{sec:oversampling}.
+    \item \textbf{Modelado:} Si el anterior paso resulta exitoso será inmediato generar un modelo que permita la clasificación de pacientes que van a necesitar OAF y los que no. El modelo de clasificación será un modelo de clasificación binaria, ya que la variable de salida es una variable categórica con dos categorías: \texttt{paciente que va a necesitar OAF} y \texttt{paciente que no va a necesitar OAF}. 
 \end{enumerate}
 
 Se van a utilizar los datos de las primeras $8$ horas de monitorización de los pacientes, se excluirán aquellos pacientes que ya han sido catalogados como pacientes que han necesitado OAF y se buscará hacer un modelo final para predecir si el paciente después de las 8 primeras horas va a necesitar OAF o no. El Estudio 2 se ha reducido a este planteamiento debido a la limitación de los datos de pacientes que han necesitado OAF, como se ha explicado anteriormente.
 
 \subsubsection{Oversampling}\label{sec:oversampling}
 
-En el campo médico, suele ser común encontrarse con conjuntos de datos donde una categoría tiene significativamente menos observaciones que otra, es decir el conjunto total de la muestra se presenta desbalanceada. Esta disparidad puede afectar negativamente el rendimiento de los modelos de clasificación, ya que pueden tener dificultades para aprender patrones de la clase minoritaria. En el caso de este estudio dónde solo se cuenta con solo 5 pacientes en una categoría (pacientes que ha necesitado OAF posteriormente a las $8$ primeras horas de ingreso) y 40  de la  otra (pacientes que no ha necesitado OAF), existe un claro desequilibrio que puede impactar la precisión de cualquier modelo que se intente construir.
+En el campo médico, suele ser común encontrarse con conjuntos de datos donde una categoría tiene significativamente menos observaciones que otra, es decir la proporción de pacientes de cada categoría no está balanceada. Esta disparidad puede afectar negativamente el rendimiento de los modelos de clasificación, ya que pueden tener dificultades para aprender patrones de la clase minoritaria. En el caso de este estudio dónde solo se cuenta con solo 5 pacientes en una categoría (pacientes que ha necesitado OAF posteriormente a las $8$ primeras horas de ingreso) y 40  de la  otra (pacientes que no ha necesitado OAF), existe un claro desequilibrio que puede impactar la precisión de cualquier modelo que se intente construir.
 
-La técnica utilizada en este trabajo, \textit{SMOTE} (\textit{Synthetic Minority Over-sampling Technique}), es un algoritmo estadístico utilizado para abordar el problema de muestras desbalanceadas en datos de clasificación. En lugar de simplemente duplicar las observaciones de la clase minoritaria, \textit{SMOTE} crea nuevas muestras artificiales interpolando entre observaciones cercanas. Esto se logra eligiendo una observación de la clase minoritaria y generando puntos artificiales en la dirección de sus vecinos más cercanos de la misma categoría. De esta manera, se aumenta el número de observaciones de la clase minoritaria sin duplicar los mismos puntos (\cite{Chawla2002}).
+La técnica utilizada en este trabajo, SMOTE (\textit{Synthetic Minority Over-sampling Technique}), es un algoritmo estadístico utilizado para abordar el problema de muestras desbalanceadas en datos de clasificación. En lugar de simplemente duplicar las observaciones de la clase minoritaria, SMOTE crea nuevas muestras artificiales interpolando entre observaciones cercanas. Esto se logra eligiendo una observación de la clase minoritaria y generando puntos artificiales en la dirección de sus vecinos más cercanos de la misma categoría. De esta manera, se aumenta el número de observaciones de la clase minoritaria sin duplicar los mismos puntos (\cite{Chawla2002}).
 \newpage
 
 \input{lib/chapter4-1.tex}
