--- a/lib/chapter5-Adj-Rand-Index.tex
+++ b/lib/chapter5-Adj-Rand-Index.tex
@@ -4,7 +4,7 @@
 \newgeometry{top=10mm, bottom=10mm, left=12mm, right=12mm}
 \begin{landscape}
 
-\subsubsection{Adjusted Rand Index entre los diferentes clusters obtenidos}
+\subsubsection{Adjusted Rand Index Entre los Diferentes Clusters Obtenidos}
 
 En la siguiente figura se muestra el \textit{Adjusted Rand Index} entre los diferentes clusters obtenidos. 
 
