--- a/lib/chapter5-FAS.tex
+++ b/lib/chapter5-FAS.tex
@@ -1,6 +1,6 @@
-\subsubsection{FAC}
+\subsubsection{FAS}
 
-\paragraph{Dendrograma de los clústeres obtenidos para FAC}
+\paragraph{Dendrograma de los clústeres obtenidos para FAS}
 
 \begin{figure}[H]
     \centering
@@ -8,7 +8,7 @@
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-1-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-1-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-1-acf.png}}
-    \caption{Dendogramas usando FAC de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
+    \caption{Dendogramas usando FAS de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
     \label{fig:acf_den_fc}
 \end{figure}
 
@@ -16,17 +16,17 @@
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-1-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-1-acf.png}}
-    \caption{Dendogramas usando FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_den_spo2}
+    \caption{Dendogramas usando FAS de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_den_spo2}
 \end{figure}
 
-\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales para FAC}
+\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales para FAS}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-2-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-2-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-2-acf.png}}
-    \caption{Cluster Plot usando FAC de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
+    \caption{Cluster Plot usando FAS de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
     \label{fig:acf_pc_fc}
 \end{figure}
 
@@ -34,45 +34,45 @@
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-2-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-2-acf.png}}
-    \caption{Cluster Plot usando FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_pc_spo2}
+    \caption{Cluster Plot usando FAS de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_pc_spo2}
 \end{figure}
 
 
-\paragraph{Puntuación de Silhouette de los clústeres obtenidos para FAC}
+\paragraph{Puntuación de Silhouette de los clústeres obtenidos para FAS}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-3-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-3-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-3-acf.png}}
-    \caption{Silhouette Plot usando FAC de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_si_fc}
+    \caption{Silhouette Plot usando FAS de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_si_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-3-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-3-acf.png}}
-    \caption{Silhouette Plot usando FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_si_spo2}
+    \caption{Silhouette Plot usando FAS de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_si_spo2}
 \end{figure}
 
-\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF para FAC}
+\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF para FAS}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-4-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-4-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-4-acf.png}}
-    \caption{Dendograma Plot k = 2 usando FAC de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_ctg_fc}
+    \caption{Dendograma Plot k = 2 usando FAS de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_ctg_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-4-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-4-acf.png}}
-    \caption{Dendograma Plot k = 2 usando FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_ctg_spo2}
+    \caption{Dendograma Plot k = 2 usando FAS de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_ctg_spo2}
 \end{figure}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres generados con los datos de {\color{blue}Periodograma} según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para FAC}
+\paragraph{Clasificación mediente Random Forest de los clústeres generados con los datos de Periodograma según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para FAS}
 
 \begin{figure}[H]
     \centering
@@ -88,7 +88,7 @@ Confusion matrix:
 1 26 11   0.2972973
 2 17  4   0.8095238
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_1}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_1}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -104,7 +104,7 @@ Confusion matrix:
 1 26 11   0.2972973
 2 17  4   0.8095238
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_2}
 \end{figure}
 
@@ -122,7 +122,7 @@ Confusion matrix:
 1 30 7   0.1891892
 2 12 9   0.5714286
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR\_quantile} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR\_quantile} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_3}
 \end{figure}
 
@@ -140,7 +140,7 @@ Confusion matrix:
 1 49  2  0.03921569
 2  3 41  0.06818182
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{SpO2} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_4}
+    \caption{Resultado de Random Forest usando FAS para \textit{SpO2} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_4}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -156,11 +156,11 @@ Confusion matrix:
 1 49  2  0.03921569
 2  3 41  0.06818182
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{SpO2\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{SpO2\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_5}
 \end{figure}
 
-\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest para FAC}
+\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest para FAS}
 
 \begin{table}[H]
     \centering
@@ -175,7 +175,7 @@ Confusion matrix:
         FR\_0\_8h & 1.7007907 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy usando FAC \textit{HR}}
+    \caption{Mean Decrease Accuracy usando FAS \textit{HR}}
 \end{table}
 
 \begin{table}[H]
@@ -191,7 +191,7 @@ Confusion matrix:
         FR\_0\_8h & 1.7007907 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy usando FAC \textit{HR\_scaled}}
+    \caption{Mean Decrease Accuracy usando FAS \textit{HR\_scaled}}
 \end{table}
 
 \begin{table}[H]
@@ -207,7 +207,7 @@ Confusion matrix:
         FR\_0\_8h & 1.7130177 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy usando FAC \textit{HR\_quantile}} 
+    \caption{Mean Decrease Accuracy usando FAS \textit{HR\_quantile}} 
 \end{table}
 
 \begin{table}[H]
@@ -223,7 +223,7 @@ Confusion matrix:
         EDAD & 2.9415274 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy usando FAC \textit{SpO2}}
+    \caption{Mean Decrease Accuracy usando FAS \textit{SpO2}}
 \end{table}
 
 \begin{table}[H]
@@ -239,11 +239,11 @@ Confusion matrix:
         DIAS\_GN & 3.0845580 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy usando FAC \textit{SpO2\_scaled}}
+    \caption{Mean Decrease Accuracy usando FAS \textit{SpO2\_scaled}}
 \end{table}
 
 
-\paragraph{Clasificación {\color{blue}mediante} Random Forest de los clústeres según FAC utilizada para {\color{blue}generar} los mismos} 
+\paragraph{Clasificación mediante Random Forest de los clústeres según FAS utilizada para generar los mismos} 
 
 \begin{figure}[H]
     \centering
@@ -259,7 +259,7 @@ Confusion matrix:
 1 37  0  0.00000000
 2  1 20  0.04761905
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR} utilizando FAC y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_RF_1}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR} utilizando FAS y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_RF_1}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -275,7 +275,7 @@ Confusion matrix:
 1 37  0  0.00000000
 2  1 20  0.04761905
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR\_scaled} utilizando FAC y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR\_scaled} utilizando FAS y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_RF_2}
 \end{figure}
 
@@ -293,7 +293,7 @@ Confusion matrix:
 1 36  1  0.02702703
 2  1 20  0.04761905
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{HR\_quantile} utilizando FAC y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{HR\_quantile} utilizando FAS y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_RF_3}
 \end{figure}
 
@@ -311,7 +311,7 @@ Confusion matrix:
 1 51 0   0.0000000
 2  1 6   0.1428571
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{SpO2} utilizando FAC y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_RF_4}
+    \caption{Resultado de Random Forest usando FAS para \textit{SpO2} utilizando FAS y clasificación de clusters k = 2}\label{fig:random_forest_acf_result_RF_4}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -327,42 +327,42 @@ Confusion matrix:
 1 51 0   0.0000000
 2  1 6   0.1428571
     \end{lstlisting}
-    \caption{Resultado de Random Forest usando FAC para \textit{SpO2\_scaled} utilizando FAC y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando FAS para \textit{SpO2\_scaled} utilizando FAS y clasificación de clusters k = 2}
     \label{fig:random_forest_acf_result_RF_5}
 \end{figure}
 
-\paragraph{Distribución de la Importancia de FAC}
+\paragraph{Distribución de la Importancia de FAS}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-5-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-5-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-5-acf.png}}
-    \caption{Importancia FAC de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_imp_fc}
+    \caption{Importancia FAS de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_imp_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-5-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-5-acf.png}}
-    \caption{Importancia FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_imp_spo2}
+    \caption{Importancia FAS de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_imp_spo2}
 \end{figure}
 
 
-\paragraph{Media de los valores de FAC en función de los clusters generados $k = 2$}
+\paragraph{Media de los valores de FAS en función de los clusters generados $k = 2$}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-6-acf.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-6-acf.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-6-acf.png}}
-    \caption{Valores de FAC por cluster k = 2 de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_cls_fc}
+    \caption{Valores de FAS por cluster k = 2 de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:acf_cls_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-6-acf.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-6-acf.png}}
-    \caption{Valores de FAC por cluster k = 2 de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_cls_spo2}
+    \caption{Valores de FAS por cluster k = 2 de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_cls_spo2}
 \end{figure}
 
