--- a/lib/chapter5-FCC.tex
+++ b/lib/chapter5-FCC.tex
@@ -9,7 +9,7 @@
     \label{fig:ccf_den}
 \end{figure}
 
-\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales}
+\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales para FCC}
 
 \begin{figure}[H]
     \centering
@@ -27,7 +27,7 @@
     \label{fig:ccf_si}
 \end{figure}
 
-\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF}
+\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF para FCC}
 
 \begin{figure}[H]
     \centering
@@ -55,7 +55,7 @@ Confusion matrix:
     \caption{Resultado de Random Forest usando FCC utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_ccf_result_1}
 \end{figure}
 
-\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest}
+\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest para FCC}
 
 \begin{table}[H]
     \centering
@@ -89,15 +89,15 @@ Confusion matrix:
 1 49 0           0
 2  0 9           0
     \end{lstlisting}
-    \caption{Resultado de Random Forest utilizando FACC y clasificación de clusters k = 2}\label{fig:random_forest_ccf_result_RF_1}
+    \caption{Resultado de Random Forest utilizando FCC y clasificación de clusters k = 2}\label{fig:random_forest_ccf_result_RF_1}
 \end{figure}
 
-\paragraph{Distribución de la Importancia de FACC}
+\paragraph{Distribución de la Importancia de FCC}
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-5-ccf.png}
-    \caption{Importancia utilizando FACC}
+    \caption{Importancia utilizando FCC}
     \label{fig:ccf_imp}
 \end{figure}
 
