--- a/lib/chapter5-Raw-data.tex
+++ b/lib/chapter5-Raw-data.tex
@@ -1,6 +1,6 @@
 \subsubsection{Raw Data}
 
-\paragraph{Dendrograma de los clústeres obtenidos}
+\paragraph{Dendrograma de los clústeres obtenidos para Raw Data}
 
 \begin{figure}[H]
     \centering
@@ -19,7 +19,7 @@
     \caption{Dendogramas de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_den_spo2}
 \end{figure}
 
-\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales}
+\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales para Raw Data}
 
 \begin{figure}[H]
     \centering
@@ -38,7 +38,7 @@
 \end{figure}
 
 
-\paragraph{Puntuación de Silhouette de los clústeres obtenidos}
+\paragraph{Puntuación de Silhouette de los clústeres obtenidos para Raw Data}
 
 \begin{figure}[H]
     \centering
@@ -55,7 +55,7 @@
     \caption{Silhouette Plot de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_si_spo2}
 \end{figure}
 
-\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF}
+\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF para Raw Data}
 
 \begin{figure}[H]
     \centering
@@ -72,7 +72,7 @@
     \caption{Dendograma Plot k = 2 de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_ctg_spo2}
 \end{figure}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}}
+\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para Raw Data}
 
 \begin{figure}[H]
     \centering
@@ -160,7 +160,7 @@ Confusion matrix:
     \label{fig:random_forest_eucl_result_5}
 \end{figure}
 
-\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest}
+\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest para Raw Data}
 
 \begin{table}[H]
     \centering
@@ -243,7 +243,7 @@ Confusion matrix:
 \end{table}
 
 
-\paragraph{Clasificación {\color{blue}mediante} Random Forest de los clústeres según Raw Data utilizada para {\color{blue}generar} los mismos} 
+\paragraph{Clasificación mediante Random Forest de los clústeres según Raw Data utilizada para generar los mismos} 
 
 \begin{figure}[H]
     \centering
