--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -1,4 +1,4 @@
-\section{CAPÍTULO VII: PLANIFICACIÓN Y PRESUPUESTO}\label{cap:results}
+\section{CAPÍTULO 7: PLANIFICACIÓN Y PRESUPUESTO}\label{cap:results}
 
 \subsection{Planificación}\label{sec:planificacion}
 
@@ -198,19 +198,20 @@ En lo que respecta a los costos relacionados con los recursos humanos asignados 
     \toprule
     Actividad & Horas Trabajadas & €/H & Total \\
     \midrule
-    Recopilación de los datos por parte de los médicos & 200 & 15 & 3000 € \\
-    Trabajo Gonzalo Aris Jiménez & 625 & 10 & 6250 € \\
-    Trabajo asesoría Médico Rosa Rodríguez & 10 & 20 & 200 €  \\
-    Trabajo asesoría Médico Felipe Gonzalez Fernández & 20 & 20 & 400 € \\
-    Trabajo asesoría tutor TFM Carolina García & 20 & 20 &  400 € \\
-    Trabajo asesoría tutor TFM Andrés M. Alonso & 20 & 20 &  400 € \\
-    Corrección y supervisión tutores TFG & 10 & 20 & 200 € \\
+    Recopilación de los datos & 200 & 15 & 3000 € \\
+    Trabajo Gonzalo Aris Jiménez & 625 & 70 & 43750 € \\
+    Trabajo asesoría Médico Rosa Rodríguez & 10 & 90 & 900 €  \\
+    Trabajo asesoría Médico Felipe Gonzalez Fernández & 20 & 90 & 1800 € \\
+    Trabajo asesoría tutor TFM Carolina García & 20 & 90 & 1800 € \\
+    Trabajo asesoría tutor TFM Andrés M. Alonso & 20 & 90 & 1800 € \\
+    Corrección y supervisión tutores TFG & 10 & 90 & 900 € \\
     \midrule
-    Total & & & 10850 € \\
+    Total & & & 54250 € \\
     \bottomrule
     \end{tabular}
-    \caption{Horas Trabajadas y Costos}\label{tab:costes-rrhh}
- \end{table}
+    \caption{Horas Trabajadas y Costos Actualizados}\label{tab:costes-rrhh-actualizados}
+\end{table}
+
 
 
  A parte de los costes asociados a los recursos humanos se consideran aquellos costes unitarios y costes de los activos utilizados en relación al tiempo que dura el presente Trabajo de Fin de Máster.
@@ -255,6 +256,6 @@ Estos activos se amortizarán para hacer frente al desgaste al que están someti
     \caption{Amortizaciones Costos Activos}\label{tab:costos-amortizados}
 \end{table}
 
-Una vez expuestos los diversos costos incurridos y las amortizaciones aplicadas a los activos, se llega a la conclusión de que el \textbf{Coste Total} del presente Trabajo de Fin de Máster asciende a $10850 + 1220.6 = 12070.6$ euros.
+Una vez expuestos los diversos costos incurridos y las amortizaciones aplicadas a los activos, se llega a la conclusión de que el \textbf{Coste Total} del presente Trabajo de Fin de Máster asciende a $54250 + 1220.6 = 55470.6$ euros.
 
 \newpage
