--- a/lib/chapter8.tex
+++ b/lib/chapter8.tex
@@ -1,4 +1,4 @@
-\section{CAPÍTULO VIII: RESPONSABILIDAD SOCIAL Y PROFESIONAL}\label{cap:responsabilidadSocialYProfesional}
+\section{CAPÍTULO 8: RESPONSABILIDAD SOCIAL Y PROFESIONAL}\label{cap:responsabilidadSocialYProfesional}
 
 \subsection{Evaluación de impacto social, ambiental, legal y ético}
 
